manifests/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: foodtrack-prod
  labels:
    app.kubernetes.io/part-of: foodtrack
    foodtrack.example/env: prod
