manifests/overlays/prod/patch-portail.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portail-qualite
spec:
  replicas: 2
