manifests/overlays/prod/patch-storage.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cache-releves
spec:
  volumeClaimTemplates:
    - metadata:
        name: donnees
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: foodtrack-hdd
        resources:
          requests: {storage: 30Gi}
